add some skeleton classes for initial implementation.

--- a/GjammT.Auth/GjammT.Auth.csproj
+++ b/GjammT.Auth/GjammT.Auth.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\GjammT.Models\GjammT.Models.csproj" />
+    </ItemGroup>
+
 </Project>
