--- a/GjammT/GjammT.csproj
+++ b/GjammT/GjammT.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-    </PropertyGroup>
+      <UserSecretsId>e83ae898-b9ef-46a1-8964-22949972955d</UserSecretsId>
+  </PropertyGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\GjammT.Auth\GjammT.Auth.csproj" />
@@ -13,6 +14,14 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="9.0.4" />
       <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.4" />
+      <PackageReference Include="Syncfusion.Blazor.Cards" Version="29.1.40" />
+      <PackageReference Include="Syncfusion.Blazor.Core" Version="29.1.40" />
+      <PackageReference Include="Syncfusion.Blazor.Data" Version="29.1.40" />
+      <PackageReference Include="Syncfusion.Blazor.Grid" Version="29.1.40" />
+      <PackageReference Include="Syncfusion.Blazor.Inputs" Version="29.1.40" />
+      <PackageReference Include="Syncfusion.Blazor.Layouts" Version="29.1.40" />
+      <PackageReference Include="Syncfusion.Blazor.Navigations" Version="29.1.40" />
+      <PackageReference Include="Syncfusion.Blazor.Themes" Version="29.1.40" />
     </ItemGroup>
 
 </Project>
