Somewhat usage of dynamic module (for resources at least)

--- a/GjammT/GjammT.csproj
+++ b/GjammT/GjammT.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\GjammT.Auth\GjammT.Auth.csproj" />
+      <ProjectReference Include="..\GjammT.SharedKernel\GjammT.SharedKernel.csproj" />
     </ItemGroup>
 
     <ItemGroup>
