--- a/GjammT/appsettings.json
+++ b/GjammT/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "ProjectPath": "/Users/joelmandell/RiderProjects/GjammT/",
+  }
 }
