Fix removal of old assembly when updating. Also simplicistic cache refresh for resources.

--- a/GjammT.CustomerRegister/GjammT.CustomerRegister.csproj
+++ b/GjammT.CustomerRegister/GjammT.CustomerRegister.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\GjammT.Models\GjammT.Models.csproj" />
+      <ProjectReference Include="..\GjammT.SharedKernel\GjammT.SharedKernel.csproj" />
     </ItemGroup>
 
     <ItemGroup>
