--- a/GjammT.CustomerRegister/GjammT.CustomerRegister.csproj
+++ b/GjammT.CustomerRegister/GjammT.CustomerRegister.csproj
@@ -5,15 +5,15 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
+        <Configurations>Debug;Release;Update</Configurations>
+        <Platforms>AnyCPU</Platforms>
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\GjammT.AccessSystem\GjammT.AccessSystem.csproj" />
+      <ProjectReference Include="..\GjammT.Core\GjammT.Core.csproj" />
       <ProjectReference Include="..\GjammT.Models\GjammT.Models.csproj" />
       <ProjectReference Include="..\GjammT.SharedKernel\GjammT.SharedKernel.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Components\" />
     </ItemGroup>
 
     <ItemGroup>
