--- a/GjammT.Models/GjammT.Models.csproj
+++ b/GjammT.Models/GjammT.Models.csproj
@@ -5,6 +5,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
+        <Configurations>Debug;Release;Update</Configurations>
+        <Platforms>AnyCPU</Platforms>
     </PropertyGroup>
 
     <ItemGroup>
@@ -24,6 +26,10 @@
         <AutoGen>True</AutoGen>
         <DependentUpon>Resources.resx</DependentUpon>
       </Compile>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\GjammT.Core\GjammT.Core.csproj" />
     </ItemGroup>
 
 </Project>
