--- a/GjammT.SharedKernel/GjammT.SharedKernel.csproj
+++ b/GjammT.SharedKernel/GjammT.SharedKernel.csproj
@@ -5,10 +5,15 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
+        <Configurations>Debug;Release;Update</Configurations>
+        <Platforms>AnyCPU</Platforms>
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Autofac" Version="8.3.0" />
       <PackageReference Include="Microsoft.AspNetCore.Components" Version="10.0.0-preview.3.25172.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="10.0.0-preview.4.25258.110" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="10.0.0-preview.4.25258.110" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="10.0.0-preview.3.25171.5" />
     </ItemGroup>
 
@@ -25,6 +30,18 @@
       <Reference Include="Microsoft.AspNetCore.Routing">
         <HintPath>..\..\..\..\..\usr\local\share\dotnet\shared\Microsoft.AspNetCore.App\10.0.0-preview.3.25172.1\Microsoft.AspNetCore.Routing.dll</HintPath>
       </Reference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\GjammT.Core\GjammT.Core.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Update="sharedsettings.json">
+        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      </Content>
     </ItemGroup>
 
 </Project>
