--- a/GjammT.AccessSystem/GjammT.AccessSystem.csproj
+++ b/GjammT.AccessSystem/GjammT.AccessSystem.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
     <PropertyGroup>
         <TargetFramework>net10.0</TargetFramework>
@@ -13,6 +13,12 @@
       <ProjectReference Include="..\GjammT.Core\GjammT.Core.csproj" />
       <ProjectReference Include="..\GjammT.Models\GjammT.Models.csproj" />
       <ProjectReference Include="..\GjammT.SharedKernel\GjammT.SharedKernel.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Update="Pages\AccessSystems.razor">
+        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      </Content>
     </ItemGroup>
 
 </Project>
