--- a/GjammT.Core/GjammT.Core.csproj
+++ b/GjammT.Core/GjammT.Core.csproj
@@ -9,4 +9,11 @@
         <Platforms>AnyCPU</Platforms>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0-preview.4.25258.110" />
+      <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="10.0.0-preview.4.25258.110" />
+      <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="10.0.0-preview.4.25258.110" />
+      <PackageReference Include="RavenDB.Client" Version="7.1.0-rc-71000" />
+    </ItemGroup>
+
 </Project>
