--- a/GjammT.CustomerRegister/GjammT.CustomerRegister.csproj
+++ b/GjammT.CustomerRegister/GjammT.CustomerRegister.csproj
@@ -14,6 +14,7 @@
       <ProjectReference Include="..\GjammT.Core\GjammT.Core.csproj" />
       <ProjectReference Include="..\GjammT.Models\GjammT.Models.csproj" />
       <ProjectReference Include="..\GjammT.SharedKernel\GjammT.SharedKernel.csproj" />
+      <ProjectReference Include="..\GjammT.UI\GjammT.UI.csproj" />
     </ItemGroup>
 
     <ItemGroup>
