--- a/GjammT.EntityRegister/GjammT.EntityRegister.csproj
+++ b/GjammT.EntityRegister/GjammT.EntityRegister.csproj
@@ -1,5 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
