--- a/GjammT.Grant/GjammT.Grant.csproj
+++ b/GjammT.Grant/GjammT.Grant.csproj
@@ -1,5 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
@@ -7,5 +6,4 @@
         <Configurations>Debug;Release;Update</Configurations>
         <Platforms>AnyCPU</Platforms>
     </PropertyGroup>
-
 </Project>
