Some updates in readme. Removed RavenDB. Looking for using ef core and postgres instead, that is the current goal :)

--- a/GjammT.Booking/GjammT.Booking.csproj
+++ b/GjammT.Booking/GjammT.Booking.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\GjammT.Models\GjammT.Models.csproj" />
       <ProjectReference Include="..\GjammT.SharedKernel\GjammT.SharedKernel.csproj" />
       <ProjectReference Include="..\GjammT.UI\GjammT.UI.csproj" />
     </ItemGroup>
