--- a/GjammT.UI/GjammT.UI.csproj
+++ b/GjammT.UI/GjammT.UI.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
     <PropertyGroup>
         <TargetFramework>net10.0</TargetFramework>
@@ -17,6 +17,7 @@
         <PackageReference Include="Syncfusion.Blazor.Inputs" Version="29.2.4" />
         <PackageReference Include="Syncfusion.Blazor.Layouts" Version="29.2.4" />
         <PackageReference Include="Syncfusion.Blazor.Navigations" Version="29.2.4" />
+        <PackageReference Include="Syncfusion.Blazor.Schedule" Version="29.2.4" />
         <PackageReference Include="Syncfusion.Blazor.Themes" Version="29.2.4" />
     </ItemGroup>
 </Project>
