--- a/GjammT.Booking/GjammT.Booking.csproj
+++ b/GjammT.Booking/GjammT.Booking.csproj
@@ -6,6 +6,7 @@
         <Configurations>Debug;Release;Update</Configurations>
         <Platforms>AnyCPU</Platforms>
         <LangVersion>preview</LangVersion>
+        <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     </PropertyGroup>
 
     <ItemGroup>
@@ -18,6 +19,12 @@
       <Content Update="Pages\Home.razor">
         <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Markdig" Version="0.41.1">
+      </PackageReference>
+      <PackageReference Include="System.ClientModel" Version="1.4.1" />
     </ItemGroup>
 
 </Project>
