--- a/GjammT.UI/GjammT.UI.csproj
+++ b/GjammT.UI/GjammT.UI.csproj
@@ -4,8 +4,13 @@
         <TargetFramework>net10.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="System.ClientModel" Version="1.4.1" />
+        <PackageReference Include="Microsoft.SemanticKernel" Version="1.55.0" />
+        <PackageReference Include="Microsoft.SemanticKernel.Connectors.OpenAI" Version="1.55.0" />
+        <PackageReference Include="Markdig" Version="0.41.1" />
         <PackageReference Include="Microsoft.AspNetCore.Components" Version="10.0.0-preview.4.25258.110" />
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="10.0.0-preview.4.25258.110" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="10.0.0-preview.4.25258.110" />
@@ -15,9 +20,11 @@
         <PackageReference Include="Syncfusion.Blazor.Data" Version="29.2.4" />
         <PackageReference Include="Syncfusion.Blazor.Grid" Version="29.2.4" />
         <PackageReference Include="Syncfusion.Blazor.Inputs" Version="29.2.4" />
+        <PackageReference Include="Syncfusion.Blazor.InteractiveChat" Version="29.2.4" />
         <PackageReference Include="Syncfusion.Blazor.Layouts" Version="29.2.4" />
         <PackageReference Include="Syncfusion.Blazor.Navigations" Version="29.2.4" />
         <PackageReference Include="Syncfusion.Blazor.Schedule" Version="29.2.4" />
+        <PackageReference Include="Syncfusion.Blazor.SmartComponents" Version="29.2.4" />
         <PackageReference Include="Syncfusion.Blazor.Themes" Version="29.2.4" />
     </ItemGroup>
 </Project>
