--- a/GjammT/GjammT.csproj
+++ b/GjammT/GjammT.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
       <ProjectReference Include="..\GjammT.Auth\GjammT.Auth.csproj" />
       <ProjectReference Include="..\GjammT.SharedKernel\GjammT.SharedKernel.csproj" />
+      <ProjectReference Include="..\GjammT.UI\GjammT.UI.csproj" />
     </ItemGroup>
 
     <ItemGroup>
@@ -21,15 +22,6 @@
       <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="10.0.0-preview.4.25258.110" />
       <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="10.0.0-preview.4.25258.110" />
       <PackageReference Include="Microsoft.AspNetCore.ConcurrencyLimiter" Version="10.0.0-preview.4.25258.110" />
-      <PackageReference Include="Syncfusion.Blazor.Cards" Version="29.2.4" />
-      <PackageReference Include="Syncfusion.Blazor.Core" Version="29.2.4" />
-      <PackageReference Include="Syncfusion.Blazor.Data" Version="29.2.4" />
-      <PackageReference Include="Syncfusion.Blazor.Grid" Version="29.2.4" />
-      <PackageReference Include="Syncfusion.Blazor.Inputs" Version="29.2.4" />
-      <PackageReference Include="Syncfusion.Blazor.Layouts" Version="29.2.4" />
-      <PackageReference Include="Syncfusion.Blazor.Navigations" Version="29.2.4" />
-      <PackageReference Include="Syncfusion.Blazor.Themes" Version="29.2.4" />
-      <PackageReference Include="Syncfusion.Blazor.Schedule" Version="29.2.4" />
     </ItemGroup>
 
     <ItemGroup>
