Some remodelling (Very WIP, needs to be fixed properly).

--- a/GjammT.SharedKernel/GjammT.SharedKernel.csproj
+++ b/GjammT.SharedKernel/GjammT.SharedKernel.csproj
@@ -34,6 +34,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\GjammT.Core\GjammT.Core.csproj" />
+      <ProjectReference Include="..\GjammT.Models\GjammT.Models.csproj" />
     </ItemGroup>
 
     <ItemGroup>
