--- a/GjammT.UI/GjammT.UI.csproj
+++ b/GjammT.UI/GjammT.UI.csproj
@@ -7,6 +7,7 @@
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="Microsoft.SemanticKernel.Connectors.Ollama" Version="1.55.0-alpha" />
         <PackageReference Include="System.ClientModel" Version="1.4.1" />
         <PackageReference Include="Microsoft.SemanticKernel" Version="1.55.0" />
         <PackageReference Include="Microsoft.SemanticKernel.Connectors.OpenAI" Version="1.55.0" />
